src/snapshots/redmine_tui_draft__test_support__journals_list_item_component_update_removed_notes.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 6 }
00: "aliceが 2026/01/15に 更 新          " | 0:"a" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 1:"l" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 2:"i" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 3:"c" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 4:"e" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 5:"が" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:"2" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 8:"0" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 9:"2" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 10:"6" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 11:"/" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 12:"0" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 13:"1" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 14:"/" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 15:"1" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 16:"5" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 17:"に" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:"更" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:"新" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
01: "                                " | 0:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
02: "  ・  ス テ ー タ ス  を  新 規  か ら  進  " | 0:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 2:"・" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 5:"ス" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 7:"テ" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 9:"ー" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 11:"タ" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 13:"ス" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 15:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 16:"を" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 19:"新" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 21:"規" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 23:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 24:"か" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 26:"ら" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 29:"進" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
03: "  ・  担 当 者  を  (な し ) か ら  bob  " | 0:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 2:"・" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 5:"担" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 7:"当" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 9:"者" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 11:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 12:"を" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 15:"(" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 16:"な" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 18:"し" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 20:")" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 21:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 22:"か" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 24:"ら" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 27:"b" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 28:"o" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 29:"b" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 30:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
04: "                                " | 0:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
05: "(none)                          " | 0:"(" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:"n" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:"o" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:"n" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:"e" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:")" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
