src/snapshots/redmine_tui_draft__test_support__journals_list_local_item_disables_focused_create_button.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 8 }
00: "● ロ ー カ ル コ メ ン ト  (local)      " | 0:"●" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"ロ" fg=Blue bg=Reset mod=NONE, 4:"ー" fg=Blue bg=Reset mod=NONE, 6:"カ" fg=Blue bg=Reset mod=NONE, 8:"ル" fg=Blue bg=Reset mod=NONE, 10:"コ" fg=Blue bg=Reset mod=NONE, 12:"メ" fg=Blue bg=Reset mod=NONE, 14:"ン" fg=Blue bg=Reset mod=NONE, 16:"ト" fg=Blue bg=Reset mod=NONE, 18:" " fg=Yellow bg=Reset mod=NONE, 19:"(" fg=Yellow bg=Reset mod=NONE, 20:"l" fg=Yellow bg=Reset mod=NONE, 21:"o" fg=Yellow bg=Reset mod=NONE, 22:"c" fg=Yellow bg=Reset mod=NONE, 23:"a" fg=Yellow bg=Reset mod=NONE, 24:"l" fg=Yellow bg=Reset mod=NONE, 25:")" fg=Yellow bg=Reset mod=NONE
01: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
02: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
03: "│ local notes                   " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"l" fg=Reset bg=Reset mod=NONE, 3:"o" fg=Reset bg=Reset mod=NONE, 4:"c" fg=Reset bg=Reset mod=NONE, 5:"a" fg=Reset bg=Reset mod=NONE, 6:"l" fg=Reset bg=Reset mod=NONE, 8:"n" fg=Reset bg=Reset mod=NONE, 9:"o" fg=Reset bg=Reset mod=NONE, 10:"t" fg=Reset bg=Reset mod=NONE, 11:"e" fg=Reset bg=Reset mod=NONE, 12:"s" fg=Reset bg=Reset mod=NONE
04: "                                "
05: "  ╭──────────╮                  " | 2:"╭" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 3:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 5:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 7:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:"╮" fg=Rgb(128, 138, 158) bg=Reset mod=NONE
06: "  │ 新 規 作 成  │                  " | 2:"│" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 3:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"新" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"規" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"作" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"成" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:"│" fg=Rgb(128, 138, 158) bg=Reset mod=NONE
07: "  ╰──────────╯                  " | 2:"╰" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 3:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 5:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 7:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:"╯" fg=Rgb(128, 138, 158) bg=Reset mod=NONE
