src/snapshots/redmine_tui_draft__test_support__journals_list_local_item_uploading.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 8 }
00: "● ロ ー カ ル コ メ ン ト  (uploading)  " | 0:"●" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"ロ" fg=Blue bg=Reset mod=NONE, 4:"ー" fg=Blue bg=Reset mod=NONE, 6:"カ" fg=Blue bg=Reset mod=NONE, 8:"ル" fg=Blue bg=Reset mod=NONE, 10:"コ" fg=Blue bg=Reset mod=NONE, 12:"メ" fg=Blue bg=Reset mod=NONE, 14:"ン" fg=Blue bg=Reset mod=NONE, 16:"ト" fg=Blue bg=Reset mod=NONE, 18:" " fg=Yellow bg=Reset mod=NONE, 19:"(" fg=Yellow bg=Reset mod=NONE, 20:"u" fg=Yellow bg=Reset mod=NONE, 21:"p" fg=Yellow bg=Reset mod=NONE, 22:"l" fg=Yellow bg=Reset mod=NONE, 23:"o" fg=Yellow bg=Reset mod=NONE, 24:"a" fg=Yellow bg=Reset mod=NONE, 25:"d" fg=Yellow bg=Reset mod=NONE, 26:"i" fg=Yellow bg=Reset mod=NONE, 27:"n" fg=Yellow bg=Reset mod=NONE, 28:"g" fg=Yellow bg=Reset mod=NONE, 29:")" fg=Yellow bg=Reset mod=NONE
01: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
02: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
03: "│ uploading local notes         " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"u" fg=Reset bg=Reset mod=NONE, 3:"p" fg=Reset bg=Reset mod=NONE, 4:"l" fg=Reset bg=Reset mod=NONE, 5:"o" fg=Reset bg=Reset mod=NONE, 6:"a" fg=Reset bg=Reset mod=NONE, 7:"d" fg=Reset bg=Reset mod=NONE, 8:"i" fg=Reset bg=Reset mod=NONE, 9:"n" fg=Reset bg=Reset mod=NONE, 10:"g" fg=Reset bg=Reset mod=NONE, 12:"l" fg=Reset bg=Reset mod=NONE, 13:"o" fg=Reset bg=Reset mod=NONE, 14:"c" fg=Reset bg=Reset mod=NONE, 15:"a" fg=Reset bg=Reset mod=NONE, 16:"l" fg=Reset bg=Reset mod=NONE, 18:"n" fg=Reset bg=Reset mod=NONE, 19:"o" fg=Reset bg=Reset mod=NONE, 20:"t" fg=Reset bg=Reset mod=NONE, 21:"e" fg=Reset bg=Reset mod=NONE, 22:"s" fg=Reset bg=Reset mod=NONE
04: "                                "
05: "  ╭──────────╮                  " | 2:"╭" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 3:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 5:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 7:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:"╮" fg=Rgb(128, 138, 158) bg=Reset mod=NONE
06: "  │ 新 規 作 成  │                  " | 2:"│" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 3:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"新" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"規" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"作" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"成" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:"│" fg=Rgb(128, 138, 158) bg=Reset mod=NONE
07: "  ╰──────────╯                  " | 2:"╰" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 3:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 5:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 7:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:"─" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:"╯" fg=Rgb(128, 138, 158) bg=Reset mod=NONE
