src/snapshots/redmine_tui_draft__test_support__journals_list_local_only_item_after_remote_items.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 13 }
00: "aliceが 2026/01/15に 更 新          " | 0:"a" fg=Blue bg=Reset mod=NONE, 1:"l" fg=Blue bg=Reset mod=NONE, 2:"i" fg=Blue bg=Reset mod=NONE, 3:"c" fg=Blue bg=Reset mod=NONE, 4:"e" fg=Blue bg=Reset mod=NONE, 5:"が" fg=Reset bg=Reset mod=NONE, 7:"2" fg=Blue bg=Reset mod=NONE, 8:"0" fg=Blue bg=Reset mod=NONE, 9:"2" fg=Blue bg=Reset mod=NONE, 10:"6" fg=Blue bg=Reset mod=NONE, 11:"/" fg=Blue bg=Reset mod=NONE, 12:"0" fg=Blue bg=Reset mod=NONE, 13:"1" fg=Blue bg=Reset mod=NONE, 14:"/" fg=Blue bg=Reset mod=NONE, 15:"1" fg=Blue bg=Reset mod=NONE, 16:"5" fg=Blue bg=Reset mod=NONE, 17:"に" fg=Reset bg=Reset mod=NONE, 19:"更" fg=Reset bg=Reset mod=NONE, 21:"新" fg=Reset bg=Reset mod=NONE
01: "                                "
02: "                                "
03: "remote notes                    " | 0:"r" fg=Reset bg=Reset mod=NONE, 1:"e" fg=Reset bg=Reset mod=NONE, 2:"m" fg=Reset bg=Reset mod=NONE, 3:"o" fg=Reset bg=Reset mod=NONE, 4:"t" fg=Reset bg=Reset mod=NONE, 5:"e" fg=Reset bg=Reset mod=NONE, 7:"n" fg=Reset bg=Reset mod=NONE, 8:"o" fg=Reset bg=Reset mod=NONE, 9:"t" fg=Reset bg=Reset mod=NONE, 10:"e" fg=Reset bg=Reset mod=NONE, 11:"s" fg=Reset bg=Reset mod=NONE
04: "                                "
05: "ロ ー カ ル コ メ ン ト  (local)        " | 0:"ロ" fg=Blue bg=Reset mod=NONE, 2:"ー" fg=Blue bg=Reset mod=NONE, 4:"カ" fg=Blue bg=Reset mod=NONE, 6:"ル" fg=Blue bg=Reset mod=NONE, 8:"コ" fg=Blue bg=Reset mod=NONE, 10:"メ" fg=Blue bg=Reset mod=NONE, 12:"ン" fg=Blue bg=Reset mod=NONE, 14:"ト" fg=Blue bg=Reset mod=NONE, 16:" " fg=Yellow bg=Reset mod=NONE, 17:"(" fg=Yellow bg=Reset mod=NONE, 18:"l" fg=Yellow bg=Reset mod=NONE, 19:"o" fg=Yellow bg=Reset mod=NONE, 20:"c" fg=Yellow bg=Reset mod=NONE, 21:"a" fg=Yellow bg=Reset mod=NONE, 22:"l" fg=Yellow bg=Reset mod=NONE, 23:")" fg=Yellow bg=Reset mod=NONE
06: "                                "
07: "                                "
08: "local notes                     " | 0:"l" fg=Reset bg=Reset mod=NONE, 1:"o" fg=Reset bg=Reset mod=NONE, 2:"c" fg=Reset bg=Reset mod=NONE, 3:"a" fg=Reset bg=Reset mod=NONE, 4:"l" fg=Reset bg=Reset mod=NONE, 6:"n" fg=Reset bg=Reset mod=NONE, 7:"o" fg=Reset bg=Reset mod=NONE, 8:"t" fg=Reset bg=Reset mod=NONE, 9:"e" fg=Reset bg=Reset mod=NONE, 10:"s" fg=Reset bg=Reset mod=NONE
09: "                                "
10: "┌──────────────────────────────┐" | 0:"┌" fg=Reset bg=Reset mod=NONE, 1:"─" fg=Reset bg=Reset mod=NONE, 2:"─" fg=Reset bg=Reset mod=NONE, 3:"─" fg=Reset bg=Reset mod=NONE, 4:"─" fg=Reset bg=Reset mod=NONE, 5:"─" fg=Reset bg=Reset mod=NONE, 6:"─" fg=Reset bg=Reset mod=NONE, 7:"─" fg=Reset bg=Reset mod=NONE, 8:"─" fg=Reset bg=Reset mod=NONE, 9:"─" fg=Reset bg=Reset mod=NONE, 10:"─" fg=Reset bg=Reset mod=NONE, 11:"─" fg=Reset bg=Reset mod=NONE, 12:"─" fg=Reset bg=Reset mod=NONE, 13:"─" fg=Reset bg=Reset mod=NONE, 14:"─" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"┐" fg=Reset bg=Reset mod=NONE
11: "│新 規 作 成                       │" | 0:"│" fg=Reset bg=Reset mod=NONE, 1:"新" fg=DarkGray bg=Reset mod=NONE, 3:"規" fg=DarkGray bg=Reset mod=NONE, 5:"作" fg=DarkGray bg=Reset mod=NONE, 7:"成" fg=DarkGray bg=Reset mod=NONE, 31:"│" fg=Reset bg=Reset mod=NONE
12: "└──────────────────────────────┘" | 0:"└" fg=Reset bg=Reset mod=NONE, 1:"─" fg=Reset bg=Reset mod=NONE, 2:"─" fg=Reset bg=Reset mod=NONE, 3:"─" fg=Reset bg=Reset mod=NONE, 4:"─" fg=Reset bg=Reset mod=NONE, 5:"─" fg=Reset bg=Reset mod=NONE, 6:"─" fg=Reset bg=Reset mod=NONE, 7:"─" fg=Reset bg=Reset mod=NONE, 8:"─" fg=Reset bg=Reset mod=NONE, 9:"─" fg=Reset bg=Reset mod=NONE, 10:"─" fg=Reset bg=Reset mod=NONE, 11:"─" fg=Reset bg=Reset mod=NONE, 12:"─" fg=Reset bg=Reset mod=NONE, 13:"─" fg=Reset bg=Reset mod=NONE, 14:"─" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"┘" fg=Reset bg=Reset mod=NONE
